--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,6 +29,7 @@
             <nav>
               <a href="{{ site.baseurl }}/">Home</a>
               <a href="{{ site.baseurl }}/search">Search</a>
+			  <a href="{{ site.baseurl }}/categories">Categories</a>
             </nav>
           </header>
         </div>
