--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,8 @@
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
     <link rel="canonical" href="{{ site.url }}{{ page.url }}" />
 
+	<script type="text/javascript" src="{{ site.baseurl }}/assets/style.js"></script>
+
     <meta name="theme-color" content="#000000">
     <link rel="icon" type="image/png" sizes="32x32" href="{{ site.baseurl }}/images/favicon-32x32.png">
   </head>
@@ -30,6 +32,11 @@
               <a href="{{ site.baseurl }}/">Home</a>
               <a href="{{ site.baseurl }}/search">Search</a>
 			  <a href="{{ site.baseurl }}/categories">Categories</a>
+
+			  <div class="switch">
+                <span class="btn-toggle"></span>
+              </div>
+
             </nav>
           </header>
         </div>
